[gd_scene load_steps=3 format=3 uid="uid://c2654y2pv8cak"]

[ext_resource type="Script" path="res://enemies/enemy_base/enemy_base.gd" id="1_fa8fq"]
[ext_resource type="Script" path="res://combat_scripts/hurtbox.gd" id="2_pbbyg"]

[node name="EnemyBase" type="CharacterBody3D"]
script = ExtResource("1_fa8fq")

[node name="Pivot" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
collision_mask = 3

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="HurtBox" type="Area3D" parent="."]
script = ExtResource("2_pbbyg")

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
